--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -350,25 +350,25 @@
                     <div class="table">
                         <h6>gs 0.32kwp</h6>
                         <div class="prices">
-                            N270, 000
+                            N290, 000
                             <span>
                                 <strong>2* 180w</strong> Mono Panels
                                 <br />
-                                <strong>1* 40amp</strong> Controller
+                                <strong>1* 30amp</strong> Controller
                                 <br />
-                                <strong>1* 150ah</strong> Gel Battery
+                                <strong>1* 150ah</strong> GEL Battery
                                 <br />
-                                <strong>1* 1kw</strong> Field-effect Inverter
+                                <strong>1* 1kw</strong> Inverter
                             </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                All lighting (LEDs recommended)</li>
+                                All lighting (LED recommended)</li>
                             <li>
-                                A 24/32 inches television</li>
+                                24 inch LED Tv</li>
                             <li>
-                                A ceiling/standing Fan</li>
+                                A ceiling/Standing Fan</li>
                             <li>
                                 A satelite decoder</li>
                         </ul>
@@ -378,27 +378,27 @@
                     <div class="table">
                         <h6>gs 0.54kwp</h6>
                         <div class="prices">
-                            N342, 000
+                            N375, 000
                             <span>
                                 <strong>3* 180w </strong> Mono Panels
                                 <br />
                                 <strong>1* 40amp</strong> Controller
                                 <br />
-                                <strong>1* 200ah</strong> Gel Battery
+                                <strong>1* 200ah</strong> GEL Battery
                                 <br />
-                                <strong>1* 1.5kw</strong> Field-effect Inverter
+                                <strong>1* 1.5kw</strong> Inverter
                             </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                All lighting (LEDs recommended)</li>
+                                All lighting (LED recommended)</li>
                             <li>
-                                One(1) 32 inches television</li>
+                                32 inch LED Tv</li>
                             <li>
-                                A ceiling/standing Fan</li>
+                                A ceiling/Standing Fan</li>
                             <li>
-                                A home theatre/satelite decoder</li>
+                                A home theatre/Decoder</li>
                         </ul>
                     </div>
                 </div>
@@ -406,27 +406,27 @@
                     <div class="table">
                         <h6>gs 0.72kwp</h6>
                         <div class="prices">
-                            N460, 000
+                            N485, 000
                             <span>
                                 <strong>4* 180w </strong> Mono Panels
                                 <br />
                                 <strong>1* 50amp</strong> Controller
                                 <br />
-                                <strong>1* 200ah</strong> Gel Battery
+                                <strong>1* 200ah</strong> GEL Battery
                                 <br />
-                                <strong>1* 2kw</strong> Field-effect Inverter
+                                <strong>1* 2kw</strong> Inverter
                             </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                All lighting (LEDs recommended)</li>
+                                All lighting (LED recommended)</li>
                             <li>
-                                One(1) 43 inches television</li>
+                                42 inch LED Tv</li>
                             <li>
-                                Two (2) ceiling/standing Fan</li>
+                                2 ceiling/standing Fan</li>
                             <li>
-                                A home theatre/satelite decoder</li>
+                                A Home theatre/Decoder</li>
                         </ul>
                     </div>
                 </div>
@@ -434,25 +434,25 @@
                     <div class="table">
                         <h6>gs 1.08kwp</h6>
                         <div class="prices">
-                            N590, 000
+                            N630, 000
                             <span>
                                 <strong>6* 180w </strong> Mono Panels
                                 <br />
                                 <strong>1* 50amp</strong> Controller
                                 <br />
-                                <strong>2* 150ah</strong> Gel Battery
+                                <strong>2* 150ah</strong> GEL Battery
                                 <br />
-                                <strong>1* 2kw</strong> Field-effect Inverter
+                                <strong>1* 2kw</strong> Inverter
                             </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                All lighting (LEDs recommended)</li>
+                                All lighting (LED recommended)</li>
                             <li>
-                                One(1) 43 inches television</li>
+                                43 inch LED Tv</li>
                             <li>
-                                Two (2) ceiling/standing Fan</li>
+                                2 ceiling/standing Fan</li>
                             <li>
                                 A home theatre/satelite decoder</li>
                         </ul>
