--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -29,23 +29,23 @@
                 <div class="table">
                     <h6>gs 0.36kwp</h6>
                     <div class="prices">
-                        N270, 000
+                        N290, 000
                         <span>
                             <strong>2* 180w</strong> Mono Panels
                             <br />
-                            <strong>1* 40amp</strong> Controller
+                            <strong>1* 30amps</strong> Controller
                             <br />
-                            <strong>1* 150ah</strong> Gel Battery
+                            <strong>1* 150ah</strong> GEL Battery
                             <br />
-                            <strong>1* 1kw</strong> Field-effect Inverter
+                            <strong>1* 1kw</strong> Inverter
                         </span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
-                            A 24/32 inches television</li>
+                            24 inch Tv</li>
                         <li>
                             A ceiling/standing Fan</li>
                         <li>
@@ -57,23 +57,23 @@
                 <div class="table">
                     <h6>gs 0.54kwp</h6>
                     <div class="prices">
-                        N342, 000
+                        N375, 000
                         <span>
                             <strong>3* 180w </strong> Mono Panels
                             <br />
-                            <strong>1* 40amp</strong> Controller
+                            <strong>1* 40amps</strong> Controller
                             <br />
-                            <strong>1* 200ah</strong> Gel Battery
+                            <strong>1* 200ah</strong> GEL Battery
                             <br />
-                            <strong>1* 1.5kw</strong> Field-effect Inverter
+                            <strong>1* 1.5kw</strong> Inverter
                         </span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
-                            One(1) 32 inches television</li>
+                            32 inches television</li>
                         <li>
                             A ceiling/standing Fan</li>
                         <li>
@@ -85,25 +85,25 @@
                 <div class="table">
                     <h6>gs 0.72kwp</h6>
                     <div class="prices">
-                        N460, 000
+                        N485, 000
                         <span>
                             <strong>4* 180w </strong> Mono Panels
                             <br />
-                            <strong>1* 50amp</strong> Controller
+                            <strong>1* 50amps</strong> Controller
                             <br />
-                            <strong>1* 200ah</strong> Gel Battery
+                            <strong>1* 200ah</strong> GEL Battery
                             <br />
-                            <strong>1* 2kw</strong> Field-effect Inverter
+                            <strong>1* 2kw</strong> Inverter
                         </span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
-                            One(1) 43 inches television</li>
+                            43 inches television</li>
                         <li>
-                             Two (2) ceiling/standing Fan</li>
+                            2 ceiling/standing Fan</li>
                         <li>
                             A home theatre/satelite decoder</li>
                     </ul>
@@ -113,25 +113,25 @@
                 <div class="table">
                     <h6>gs 1.08kwp</h6>
                     <div class="prices">
-                        N590, 000
+                        N630, 000
                         <span>
                             <strong>6* 180w </strong> Mono Panels
                             <br />
-                            <strong>1* 50amp</strong> Controller
+                            <strong>1* 50amps</strong> Controller
                             <br />
-                            <strong>2* 150ah</strong> Gel Battery
+                            <strong>2* 150ah</strong> GEL Battery
                             <br />
-                            <strong>1* 2kw</strong> Field-effect Inverter
+                            <strong>1* 2kw</strong> Inverter
                         </span>
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
-                            One(1) 43 inches television</li>
+                            43 inches television</li>
                         <li>
-                            Two (2) ceiling/standing Fan</li>
+                            2 ceiling/standing Fan</li>
                         <li>
                             A home theatre/satelite decoder</li>
                     </ul>
@@ -144,24 +144,24 @@
                 <div class="table">
                     <h6>gs 1.44kwp</h6>
                     <div class="prices">
-                        N850, 000
+                        N1, 125, 000
                         <span>
                             <strong>8* 180w</strong> Mono Panels
                             <br />
-                            <strong>1* 50amp</strong> Controller
+                            <strong>1* 50amps</strong> MPPT Controller
                             <br />
-                            <strong>2* 200ah</strong> Gel Battery
+                            <strong>2* 200ah</strong> GEL Battery
                             <br />
-                            <strong>1* 1.5kw</strong> Transformer Inverter
+                            <strong>1* 2kva</strong> Transformer Inverter
                     </div>
                     <ul>
                         <p>load capacity</p>
                             <li>
-                                All lighting (LEDs recommended)</li>
+                                All lighting (LED recommended)</li>
                             <li>
-                                2 TVs, A Laptop, A Freezer</li>
+                                2 LED TVs, 2 Laptops</li>
                             <li>
-                                Three (3) ceiling Fan</li>
+                                3 ceiling Fan, Freezer</li>
                             <li>
                                 A home theatre/satelite decoder</li>
                     </ul>
@@ -171,22 +171,22 @@
                 <div class="table">
                     <h6>gs 1.8kwp</h6>
                     <div class="prices">
-                        N960, 000
+                        N1, 320, 000
                         <span>
-                            <strong>10* 180w</strong> Mono Panels
+                            <strong>6* 250w</strong> Mono Panels
                             <br />
-                            <strong>2* 60amp</strong> Controller
+                            <strong>1* 50amps</strong> MPPT Controller
                             <br />
-                            <strong>2* 200ah</strong> Gel Battery
+                            <strong>2* 200ah</strong> GEL Battery
                             <br />
-                            <strong>1* 2kw</strong> Transformer Inverter
+                            <strong>1* 2.5kva</strong> Transformer Inverter
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
-                            2 TVs, A Laptop, A Freezer</li>
+                            2 LED TVs, 2 Laptop, A Freezer</li>
                         <li>
                             4 Fans, A washing machine</li>
                         <li>
@@ -198,22 +198,22 @@
                 <div class="table">
                     <h6>gs 2.7kwp</h6>
                     <div class="prices">
-                        N1, 200, 000
+                        N1, 750, 000
                         <span>
-                            <strong>15* 180w</strong> Mono Panels
+                            <strong>8* 250w</strong> Mono Panels
                             <br />
-                            <strong>2* 80amp</strong> Controller
+                            <strong>1* 60amps</strong> MPPT Controller
                             <br />
-                            <strong>3* 200ah</strong> Gel Battery
+                            <strong>3* 200ah</strong> GEL Battery
                             <br />
-                            <strong>1* 3kw</strong> Transformer Inverter
+                            <strong>1* 3.5kva</strong> Transformer Inverter
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
-                            3 TVs, A Freezer, 2 Laptops</li>
+                            3 LED TVs, A Freezer, A Fridge</li>
                         <li>
                             4 Fans, A washing machine</li>
                         <li>
@@ -224,15 +224,15 @@
                 <div class="table">
                     <h6>gs 3.24kwp</h6>
                     <div class="prices">
-                        N1, 750, 000
+                        N2, 350, 000
                         <span>
-                            <strong>18* 180w</strong> Mono Panels
+                            <strong>12* 300w</strong> Mono Panels
                             <br />
-                            <strong>2* 80amp</strong> Controller
+                            <strong>2* 50amps</strong> MPPT Controller
                             <br />
-                            <strong>4* 200ah</strong> Gel Battery
+                            <strong>4* 200ah</strong> GEL Battery
                             <br />
-                            <strong>1* 3.5kw</strong> Transformer Inverter
+                            <strong>1* 5kva</strong> Transformer Inverter
                     </div>
                     <ul>
                         <p>load capacity</p>
@@ -253,22 +253,22 @@
                 <div class="table">
                     <h6>gs 3.5kwp</h6>
                     <div class="prices">
-                        N2, 271, 000
+                        N2, 970, 000
                         <span>
-                            <strong>10* 350w</strong> Mono Panels
+                            <strong>6* 595w</strong> Mono Perc
                             <br />
-                            <strong>2* 80amp</strong> Controller
+                            <strong>2* 60amps</strong> Controller
                             <br />
-                            <strong>8* 200ah</strong> Gel Battery
+                            <strong>8* 200ah</strong> GEL Battery
                             <br />
                             <strong>1* 5kw</strong> Transformer Inverter
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
-                            3 TVs, A Freezer, 2 Laptops</li>
+                            3 TVs, A Freezer, A Fridge</li>
                         <li>
                             4 Fans, A wash/pump machine</li>
                         <li>
@@ -282,47 +282,20 @@
                     <div class="prices">
                         N3, 580, 500
                         <span>
-                            <strong>15* 350w</strong> Mono Panels
+                            <strong>9* 595w</strong> Mono Perc
                             <br />
-                            <strong>2* 80amp</strong> Controller
+                            <strong>2* 70amps</strong> Controller
                             <br />
-                            <strong>12* 800ah</strong> Gel Battery
+                            <strong>12* 1000ah</strong> GEL Battery
                             <br />
                             <strong>1* 5kw</strong> Transformer Inverter
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
                         <li>
                             3 TVs, 2 Freezers/Wash machine</li>
-                        <li>
-                            1 1Hp smart AC, A pump machine</li>
-                        <li>
-                            A home theatre/satelite decoder</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-                <div class="table">
-                    <h6>gs 7kwp</h6>
-                    <div class="prices">
-                        N3, 950, 000
-                        <span>
-                            <strong>20* 350w</strong> Mono Panels
-                            <br />
-                            <strong>2* 80amp</strong> Controller
-                            <br />
-                            <strong>12* 1000ah</strong> Gel Battery
-                            <br />
-                            <strong>1* 5kw</strong> Transformer Inverter
-                    </div>
-                    <ul>
-                        <p>load capacity</p>
-                        <li>
-                            All lighting (LEDs recommended)</li>
-                        <li>
-                            3 TVs, 2 Freezer/Wash machine</li>
                         <li>
                             2 1Hp smart AC, A pump machine</li>
                         <li>
@@ -332,22 +305,49 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h6>gs 8.75KWp</h6>
+                    <h6>gs 7kwp</h6>
                     <div class="prices">
-                        N4, 550, 000
+                        N4, 500, 000
                         <span>
-                            <strong>25* 350w</strong> Mono Panels
+                            <strong>12* 595w</strong> Mono Perc
                             <br />
-                            <strong>2* 80amp</strong> Controller
+                            <strong>2* 80amps</strong> MPPT Controller
                             <br />
-                            <strong>12* 1200ah</strong> Gel Battery
+                            <strong>12* 1200ah</strong> GEL Battery
                             <br />
                             <strong>1* 5kw</strong> Transformer Inverter
                     </div>
                     <ul>
                         <p>load capacity</p>
                         <li>
-                            All lighting (LEDs recommended)</li>
+                            All lighting (LED recommended)</li>
+                        <li>
+                            3 TVs, 2 Freezer/Wash machine</li>
+                        <li>
+                            3 1Hp smart AC, A pump machine</li>
+                        <li>
+                            A home theatre/satelite decoder</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                <div class="table">
+                    <h6>gs 8.75KWp</h6>
+                    <div class="prices">
+                        N5, 550, 000
+                        <span>
+                            <strong>15* 595w</strong> Mono Perc
+                            <br />
+                            <strong>2* 80amps</strong> MPPT Controller
+                            <br />
+                            <strong>12* 1500ah</strong> GEL Battery
+                            <br />
+                            <strong>1* 5kw</strong> Transformer Inverter
+                    </div>
+                    <ul>
+                        <p>load capacity</p>
+                        <li>
+                            All lighting (LED recommended)</li>
                         <li>
                             3 TVs, 2 Freezers/Wash machine</li>
                         <li>
